--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
+  background: #F9FAFB;
   margin: 0;
+  padding: 0;
+  height: 100dvh;
+  width: 100dvw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
